# rss-recommendation-platform

./: .gitignore  PROJECT_STATUS.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 17462152540a_add_keywords_and_category_to_articles.py  2c80e2760970_add_fetch_fields_to_content_sources.py  2ec61f38a5be_add_user_isolation_and_cascade_delete.py  3b3e04fc0860_create_articles_table.py  a79bcd899b20_enable_on_delete_cascade_for_articles_.py  ed09c9a9060d_add_images_summary_word_count_to_.py
app/: main.py
app/core/: config.py  crud_utils.py  database.py  security.py
app/models/: __init__.py  article.py  content_source.py  user.py
app/routers/: admin.py  articles.py  auth.py  sources.py
app/schemas/: article.py  source.py  user.py
app/services/: ai_service.py  crawler.py  fetch_service.py  scheduler.py
tests/: conftest.py  test_auth.py  test_sources.py
