[project]
name = "rss-recommendation-platform"
version = "0.1.0"
description = "基于 FastAPI 的个性化 RSS 聚合与推荐平台"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "bcrypt==4.0.1",
    "celery>=5.5.3",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "openai>=1.99.9",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
